Поправил package.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "author": "David Rizametov",
   "description": "Blog",
-  "homepage": "https://rizametovd.github.io/react-blog",
+  "homepage": "https://rizametovd.github.io/react-blog/",
   "name": "react-blog",
   "version": "0.1.0",
   "private": true,
